--- a/src/scss/utils.scss
+++ b/src/scss/utils.scss
@@ -21,7 +21,7 @@ body {
 
 .mobile__content {
   width: 100%;
-  background: $blue-dark;
+  //background: $blue-dark;
   height: 100%;
   display: flex;
   flex-direction: column;
